# xgen-sdk

./: .gitattributes  .gitignore  ARCHITECTURE_PLAN.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/xgen_sdk/: __init__.py  app.py  deploy_state_machine.py
src/xgen_sdk/audio_catalog/: __init__.py
src/xgen_sdk/auth/: __init__.py  gateway.py  object_guard.py  permission_constants.py  permission_registry.py  permission_resolver.py  supervision_resolver.py
src/xgen_sdk/config/: __init__.py  base_config.py  config_client.py  config_composer.py  config_utils.py  local_config.py  redis_config.py
src/xgen_sdk/db/: __init__.py  app_db.py  base_model.py  config_serializer.py  database_config.py  db_config_helper.py  pool_manager.py
src/xgen_sdk/db_connections/: __init__.py  dsn_builder.py
src/xgen_sdk/harness/: README.md  __init__.py  events.py  facade.py
src/xgen_sdk/harness/_sdk/: __init__.py  events.py  facade.py  store.py
src/xgen_sdk/harness/adapters/: resource_registry.py
src/xgen_sdk/harness/api/: router.py
src/xgen_sdk/harness/compile/: README.md
src/xgen_sdk/harness/core/: active_policies.py  fs_scanner.py  llm_call.py  orchestrator_registry.py  pipeline.py  registry.py  runtime_config.py  state.py
src/xgen_sdk/harness/forge/: algebra.py  runner.py
src/xgen_sdk/harness/memory/: __init__.py  state_bridge.py
src/xgen_sdk/harness/providers/: __init__.py  anthropic.py  base.py  openai.py
src/xgen_sdk/harness/stages/s01_input/: stage.py
src/xgen_sdk/harness/stages/s02_history/: stage.py
src/xgen_sdk/harness/stages/s03_prompt/: stage.py
src/xgen_sdk/harness/stages/s04_tool/: stage.py
src/xgen_sdk/harness/stages/s05_policy/: stage.py
src/xgen_sdk/harness/stages/s06_context/: cascade.py
src/xgen_sdk/harness/stages/s07_act/: stage.py
src/xgen_sdk/harness/stages/s08_decide/strategies/: judge_then_loop.py
src/xgen_sdk/harness/stages/s09_finalize/: stage.py
src/xgen_sdk/harness/stages/strategies/: discovery.py  evaluation.py  guard.py  guard_precondition.py  tool_executor.py
src/xgen_sdk/harness/tools/: builtin.py  frozen_source.py  ontology_tool.py  rag_tool.py
src/xgen_sdk/jeju_bank/: __init__.py
src/xgen_sdk/jeju_bank/storage/: __init__.py
src/xgen_sdk/jeju_bank/storage/ude/: __init__.py  ude_cipher.py
src/xgen_sdk/jeju_bank/storage/ude/PythonAPIForUDE/sample/: BasicSample.py  SDBAPIForPythonFile.py
src/xgen_sdk/jeju_bank/storage/ude/PythonAPIForUDE/sample/origin/: test.txt
src/xgen_sdk/llm_catalog/: __init__.py
src/xgen_sdk/logging/: __init__.py  backend_logger.py
src/xgen_sdk/notification/: __init__.py  publisher.py  types.py
src/xgen_sdk/quality_judge/: __init__.py  llm_judge.py
src/xgen_sdk/quota/: __init__.py  evaluator.py  period.py  resolver.py  types.py
src/xgen_sdk/redis/: __init__.py  client.py
src/xgen_sdk/storage/: __init__.py  audit.py  crypto.py  minio_client.py
tests/: test_jeju_ude_cipher.py  test_oracle_ssl_dsn.py  test_storage_crypto.py
tests/harness/: test_compile_literal_and_ssrf.py  test_decide_terminal_tools.py  test_dedupe.py  test_error_codes_stability.py  test_error_hierarchy.py  test_external_inputs_secret.py  test_guards.py  test_history_max.py  test_judge_then_loop.py  test_memory_progress.py  test_providers_registry.py  test_public_api.py  test_recall.py  test_recall_tools.py  test_tool_diversity_guard.py
