[project]
name = "xgen-sdk"
version = "1.4.2"
description = "XGen Platform Shared SDK - DB, Config, Storage, Auth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xgen_sdk*"]
