[project]
name = "xgen-sdk"
version = "1.25.0"
description = "XGen Platform Shared SDK — unified DB, Config, Storage, Auth, Quota, Notification, and LLM Catalog for agent and RAG services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "PlateerLab" },
]
keywords = [
    "xgen",
    "xgen-sdk",
    "agent",
    "agents",
    "ai-agent",
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "llm-platform",
    "llm-catalog",
    "openai",
    "anthropic",
    "gemini",
    "fastapi",
    "postgresql",
    "psycopg",
    "redis",
    "minio",
    "s3",
    "abac",
    "permissions",
    "authentication",
    "quota",
    "rate-limiting",
    "notification",
    "platform-sdk",
    "plateerlab",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.1.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "mcp>=0.9",
]

[project.urls]
Homepage = "https://github.com/PlateerLab/xgen-sdk"
Repository = "https://github.com/PlateerLab/xgen-sdk"
"Source Code" = "https://github.com/PlateerLab/xgen-sdk"
"Issue Tracker" = "https://github.com/PlateerLab/xgen-sdk/issues"
Changelog = "https://github.com/PlateerLab/xgen-sdk/releases"

# 하네스 빌트인 Guard 자동 발견. 그룹명 "xgen_harness.guards"는 외부 플러그인 계약이라
# 유지하고, 타겟 경로만 vendored 위치(xgen_sdk.harness.*)로 이식.
[project.entry-points."xgen_harness.guards"]
token_budget      = "xgen_sdk.harness.stages.strategies.guard:TokenBudgetGuard"
cost_budget       = "xgen_sdk.harness.stages.strategies.guard:CostBudgetGuard"
iteration         = "xgen_sdk.harness.stages.strategies.guard:IterationGuard"
content           = "xgen_sdk.harness.stages.strategies.guard:ContentGuard"
tool_precondition = "xgen_sdk.harness.stages.strategies.guard_precondition:ToolPreconditionGuard"
hitl              = "xgen_sdk.harness.stages.strategies.guard:HITLGuard"
tool_diversity    = "xgen_sdk.harness.stages.strategies.guard:ToolDiversityGuard"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xgen_sdk*"]
